--- a/blog.html
+++ b/blog.html
@@ -9,13 +9,33 @@
 
     <link rel="stylesheet" href="./assets/css/styles.css" />
     <link rel="stylesheet" href="./assets/css/blog.css" />
-
-    <script defer src="./assets/js/logic.js" type="text/javascript"></script>
-    <script defer src="./assets/js/blog.js" type="text/javascript"></script>
 </head>
 
 <body>
     <!-- TODO: Create header, main, and footer elements -->
+    <header>
+        <nav>
+            <h1>My First Blog</h1>
+            <!-- TODO: add link to portfolio -->
+            <button type="button" class="back-button">Back</button>
+            <label class="theme-toggle">
+                <input type="checkbox">
+            </label>
+        </nav>
+    </header>
+
+    <main>
+
+    </main>
+
+    <footer>
+        <div>
+            <p>Alana Hearne 2024</p>
+        </div>
+    </footer>
+
+    <script defer src="./assets/js/logic.js" type="text/javascript"></script>
+    <script defer src="./assets/js/blog.js" type="text/javascript"></script>
 </body>
 
 </html>
