--- a/index.html
+++ b/index.html
@@ -9,13 +9,48 @@
 
     <link rel="stylesheet" href="./assets/css/styles.css" />
     <link rel="stylesheet" href="./assets/css/form.css" />
-
-    <script defer src="./assets/js/logic.js" type="text/javascript"></script>
-    <script defer src="./assets/js/form.js" type="text/javascript"></script>
 </head>
 
 <body>
     <!-- TODO: Create landing page elements -->
+    <header>
+        <nav>
+            <!-- TODO: add link to portfolio -->
+            <label class="theme-toggle">
+                <input type="checkbox">
+            </label>
+        </nav>
+    </header>
+
+    <main>
+        <section>
+            <div>
+                <img src="./assets/images/landing-main.png" alt="illustration of person in thought">
+            </div>
+            <div>
+                <h1>What's on your mind?</h1>
+                <form>
+                    <label for="username">Username</label>
+                    <input type="text" id="username" name="username">
+                    <label for="post-title">Title</label>
+                    <input type="text" id="post-title" name="post-title">
+                    <label for="content">Content</label>
+                    <input type="text" id="content" name="content">
+                    <label for="submit">Submit</label>
+                    <input type="submit" id="submit" name="submit">
+                </form>
+            </div>
+        </section>
+    </main>
+
+    <footer>
+        <div>
+            <p>Alana Hearne 2024</p>
+        </div>
+    </footer>
+
+    <script defer src="./assets/js/logic.js" type="text/javascript"></script>
+    <script defer src="./assets/js/form.js" type="text/javascript"></script>
 </body>
 
 </html>
