--- a/index.html
+++ b/index.html
@@ -12,13 +12,14 @@
     <link rel="stylesheet" href="./assets/css/form.css" />
 </head>
 
-<body>
+<body class="container dark">
     <!-- TODO: Create landing page elements -->
     <header>
         <nav>
             <!-- TODO: add link to portfolio -->
-            <label class="theme-toggle">
-                <input type="checkbox">
+            <label class="switch">
+                <input type="checkbox" id="theme-switcher">
+                <span class="slider round"></span>
             </label>
         </nav>
     </header>
@@ -36,7 +37,7 @@
                     <label for="post-title">Title</label>
                     <input type="text" id="post-title" name="post-title">
                     <label for="content">Content</label>
-                    <input type="text" id="content" name="content">
+                    <textarea type=text" id="content" name="content" rows="4" cols="50"></textarea>
                     <input type="submit" id="submit" name="submit">
                 </form>
             </div>
