fixed setting toggle from local storage

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="./assets/css/form.css" />
 </head>
 
-<body class="container dark">
+<body class="container light">
     <!-- TODO: Create landing page elements -->
     <header>
         <nav>
