--- a/blog.html
+++ b/blog.html
@@ -3,20 +3,21 @@
 
 <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <meta http-equiv="X-UA-Compatible" content="ie=edge"/>
     <title>My First Blog</title>
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
-    <link rel="stylesheet" href="./assets/css/styles.css" />
-    <link rel="stylesheet" href="./assets/css/blog.css" />
+    <!-- <link rel="stylesheet" href="./assets/css/reset.css"/> -->
+    <link rel="stylesheet" href="./assets/css/styles.css"/>
+    <link rel="stylesheet" href="./assets/css/blog.css"/>
 </head>
 
 <body class="container light">
     <!-- TODO: Create header, main, and footer elements -->
     <header>
+        <h1 class="blog-header">My First Blog</h1>
         <nav>
-            <h1>My First Blog</h1>
             <!-- TODO: add link to portfolio -->
             <button onclick="location.href='index.html'" type="button" id="back-button" name="back-button">Back</button>
             <label class="switch">
