final styling, fixed error handling

--- a/blog.html
+++ b/blog.html
@@ -14,11 +14,9 @@
 </head>
 
 <body class="container light">
-    <!-- TODO: Create header, main, and footer elements -->
-    <header>
-        <h1 class="blog-header">My First Blog</h1>
+    <header class="blog-header">
+        <p>Blog Entries</p>
         <nav>
-            <!-- TODO: add link to portfolio -->
             <button onclick="location.href='index.html'" type="button" id="back-button" name="back-button">Back</button>
             <label class="switch">
                 <input type="checkbox" id="theme-switcher">
@@ -27,12 +25,12 @@
         </nav>
     </header>
 
-    <main>
+    <main class="blog-main">
     </main>
 
     <footer>
         <div>
-            <p>Alana Hearne 2024</p>
+            <a href="https://ajhearne-mzaosw.github.io/ahearne-portfolio/" class="footer">Alana Hearne 2024</a>
         </div>
     </footer>
 
