--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         <div></div>
         <nav>
             <!-- TODO: add link to portfolio -->
+            <button onclick="location.href='blog.html'" type="button" id="blog-button" name="blog-button">Blog</button>
             <label class="switch">
                 <input type="checkbox" id="theme-switcher">
                 <span class="slider round"></span>
@@ -29,7 +30,7 @@
     <main>
         <section class="main">
             <div>
-                <img src="./assets/images/blog-dark.png" alt="illustration of person in thought" id="main-image">
+                <img src="./assets/images/blog-light.png" alt="illustration of person in thought" id="main-image">
             </div>
             <div class="blog-form">
                 <h1>What's on your mind?</h1>
@@ -48,7 +49,7 @@
 
     <footer>
         <div>
-            <p>Alana Hearne 2024</p>
+            <a href="https://ajhearne-mzaosw.github.io/ahearne-portfolio/" class="footer">Alana Hearne 2024</a>
             <!-- <a href="https://storyset.com/internet">Internet illustrations by Storyset</a> -->
         </div>
     </footer>
